# mlp

./: .justfile  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: main.yml
src/jax/: pyproject.toml
src/python/: pyproject.toml
src/triton/: pyproject.toml
src/triton/src/triton_mlp/: cli.py
