[project]
name = "python-mlp"
version = "0.0.0"
description = "Multilayer perceptron (MLP) in Python"
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["utils", "typer>=0.12.5"]

[project.scripts]
python-mlp = "python_mlp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }
